<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/gradient_1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp">

                <TextView
                    android:id="@+id/tv_one_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangla_font_1"
                    android:text="অ্যাচিভার্স"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_one_login"
                    android:fontFamily="@font/bangla_font_1"
                    android:text="পরীক্ষার  পপ্রস্তুতি এখন আরো সহজ"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="240dp"
                        app:cardBackgroundColor="#fcfcfc"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_bold"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="Creat New Account" />

                            <EditText
                                android:id="@+id/txtName"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/edt_back"
                                android:drawableRight="@drawable/ic_name"
                                android:ems="10"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/name"
                                android:inputType="text"
                                android:padding="8dp" />

                            <EditText
                                android:id="@+id/txtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/edt_back"
                                android:drawableRight="@drawable/ic_email"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:padding="8dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingLeft="8dp"
                                    android:text="+91"
                                    android:textSize="20sp" />

                                <EditText
                                    android:id="@+id/txtMobile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/edt_back"
                                    android:drawableRight="@drawable/ic_mobile"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:hint="@string/mobile"
                                    android:importantForAutofill="no"
                                    android:inputType="number"
                                    android:padding="8dp"
                                    android:textSize="20sp" />
                            </LinearLayout>

                            <EditText
                                android:id="@+id/txtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/edt_back"
                                android:drawableRight="@drawable/ic_lock"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:padding="8dp" />

                            <EditText
                                android:id="@+id/txtConPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/edt_back"
                                android:drawableRight="@drawable/ic_lock"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:padding="8dp" />

                            <androidx.cardview.widget.CardView
                                android:id="@+id/btnSignUp"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                app:cardCornerRadius="20dp">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/constrainLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:background="@drawable/gradient_1_rounded">

                                    <ProgressBar
                                        android:id="@+id/progressBar"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="5dp"
                                        android:layout_marginRight="5dp"
                                        android:indeterminateTint="#fff"
                                        android:indeterminateTintMode="src_atop"
                                        android:padding="10dp"
                                        android:visibility="invisible"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toStartOf="@+id/tvButtonText"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/tvButtonText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/montserrat_regular"
                                        android:paddingLeft="20dp"
                                        android:paddingRight="10dp"
                                        android:text="SIGN UP"
                                        android:textColor="#fff"
                                        android:textSize="20sp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintVertical_bias="0.512" />


                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </androidx.cardview.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:text="@string/already_have_an_account"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/btnSignin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:text="@string/sign_in"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="18sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="20dp" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>